# libao

./: .gitignore  CMakeLists.txt
include/ao/: os_types.h
